--- a/scss/areas/_header.scss
+++ b/scss/areas/_header.scss
@@ -9,6 +9,12 @@
 }
 
 .banner-img {
+	#ratings {
+		display: none;
+	}
+	span {
+		display: none;
+	}
 	img {
 		padding-top: 5em;
 		text-align: center;
