--- a/css/app.css
+++ b/css/app.css
@@ -385,7 +385,9 @@ a:hover {
             box-shadow: 2px 5px 10px #090909;
     -webkit-border-radius: 2%;
        -moz-border-radius: 2%;
-            border-radius: 2%; }
+            border-radius: 2%;
+    max-width: 400px;
+    max-height: 267px; }
   .featured-items p,
   .specials p {
     font-size: 16px;
@@ -605,6 +607,8 @@ a:hover {
 
 .page-image img {
   display: block;
+  max-width: 400px;
+  max-height: 267px;
   margin-left: auto;
   margin-right: auto;
   -webkit-border-radius: 5px;
