--- a/scss/pages/_featured-specials.scss
+++ b/scss/pages/_featured-specials.scss
@@ -38,6 +38,8 @@
 .page-image {
 	img {
 		display: block;
+		max-width: 400px;
+		max-height: 267px;
 		margin-left: auto;
 		margin-right: auto;
 		border-radius: 5px;
