--- a/scss/pages/_front-page.scss
+++ b/scss/pages/_front-page.scss
@@ -75,6 +75,8 @@
 	img {
 		box-shadow: 2px 5px 10px #090909;
 		border-radius: 2%;
+		max-width: 400px;
+		max-height: 267px;
 	}
 	p {
 		font-size: 16px;
